# boss-job-radar-v4

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .reasonix-rules.md  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  SCRIPT.md  SKILL.md  boss_app.py  boss_automation.py  boss_company.py  boss_firefox.py  boss_geo.py  boss_launcher.py  boss_replier.py  boss_state.py  pyproject.toml  requirements.txt  setup.sh  start.bat
.github/workflows/: ci.yml
interview/: batch_seed.py  benchmark.py  config.py  db.py  engine.py  fast_qa.py  llm_client.py  main.py  requirements.txt  seed_data.py  start.sh
interview/static/: index.html
lakejob_cli/: __init__.py  cli.py  client.py  output.py  schema.json
static/: dashboard.html
tests/: test_boss_state.py  test_smart_send.py
